# geometric-modeling

./: LICENSE  README.md
lab2/: .gitignore  CMakeLists.txt
lab2/outputs/: bunny1000.off  bunny500.off  cat.off  horse.off  hound.off  luigi.off  sphere.off
lab2/src/: main.cpp
lab4/: 1_vector_field.txt  2_vector_field.txt  3_scalar_function.txt  8_flipped_triangles.txt  CMakeLists.txt
lab4/data/: blade-nice-flip-cyl2.off
lab4/src/: main.cpp  mesh_param.cpp  mesh_param.h  tutorial_nrosy.cpp
